--- a/src/components/ReviewMovie/DetailReviewFilm.scss
+++ b/src/components/ReviewMovie/DetailReviewFilm.scss
@@ -71,6 +71,10 @@
                 margin-top: 20px;
                 text-align: justify;
 
+                img {
+                    width: 100%;
+                }
+
             }
 
             .row-content-readmore {
