--- a/src/components/Discount/DiscountList.scss
+++ b/src/components/Discount/DiscountList.scss
@@ -30,9 +30,10 @@
                 margin-top: 30px;
 
                 .img-dis {
-                    position: relative;
-                    width   : 300px;
-                    margin  : auto;
+                    position     : relative;
+                    width        : 300px;
+                    margin       : auto;
+                    margin-bottom: 10px;
 
                     .image__ {
                         width  : 300px;
@@ -80,59 +81,59 @@
 
             }
 
-            .row-img-dis-2 {
-                margin-top: 30px;
+            // .row-img-dis-2 {
+            //     margin-top: 30px;
 
-                .img-dis {
-                    position: relative;
-                    width   : 300px;
-                    margin  : auto;
+            //     .img-dis {
+            //         position: relative;
+            //         width   : 300px;
+            //         margin  : auto;
 
-                    .image__ {
-                        width  : 300px;
-                        display: block;
-                    }
+            //         .image__ {
+            //             width  : 300px;
+            //             display: block;
+            //         }
 
-                    .image__overlay__dis {
-                        position       : absolute;
-                        top            : 0;
-                        left           : 0;
-                        width          : 100%;
-                        height         : 100%;
-                        background     : rgba(0, 0, 0, 0.6);
-                        color          : #ffffff;
-                        font-family    : 'Quicksand', sans-serif;
-                        display        : flex;
-                        flex-direction : column;
-                        align-items    : center;
-                        justify-content: center;
-                        opacity        : 0;
-                        transition     : opacity 0.25s;
+            //         .image__overlay__dis {
+            //             position       : absolute;
+            //             top            : 0;
+            //             left           : 0;
+            //             width          : 100%;
+            //             height         : 100%;
+            //             background     : rgba(0, 0, 0, 0.6);
+            //             color          : #ffffff;
+            //             font-family    : 'Quicksand', sans-serif;
+            //             display        : flex;
+            //             flex-direction : column;
+            //             align-items    : center;
+            //             justify-content: center;
+            //             opacity        : 0;
+            //             transition     : opacity 0.25s;
 
-                        --blur {
-                            backdrop-filter: blur(5px);
-                        }
+            //             --blur {
+            //                 backdrop-filter: blur(5px);
+            //             }
 
-                        >* {
-                            transform : translateY(20px);
-                            transition: transform 0.25s;
-                        }
-                    }
+            //             >* {
+            //                 transform : translateY(20px);
+            //                 transition: transform 0.25s;
+            //             }
+            //         }
 
-                    .image__overlay--primary {
-                        backdrop-filter: blur(2px);
-                    }
+            //         .image__overlay--primary {
+            //             backdrop-filter: blur(2px);
+            //         }
 
-                    .image__overlay__dis:hover {
-                        opacity: 1;
+            //         .image__overlay__dis:hover {
+            //             opacity: 1;
 
-                        >* {
-                            transform: translateY(0);
-                        }
-                    }
-                }
+            //             >* {
+            //                 transform: translateY(0);
+            //             }
+            //         }
+            //     }
 
-            }
+            // }
         }
     }
 }
