--- a/src/components/Share/SearchBar.scss
+++ b/src/components/Share/SearchBar.scss
@@ -34,18 +34,15 @@
     }
 
     .result {
-        margin-top            : 10px;
-        width                 : 300px;
-        height                : 300px;
-        background-color      : rgb(255, 255, 255);
-        box-shadow            : rgba(0, 0, 0, 0.35) 0px 5px 15px;
-        overflow              : scroll;
-        //overflow        : hidden;
-        display               : inline-block;
-        position              : absolute;
-        //overflow-y        : auto;
-        //top                 : 40px;
-        top                   : 0;
+        margin-top      : 10px;
+        width           : 300px;
+        height          : 300px;
+        background-color: rgb(255, 255, 255);
+        box-shadow      : rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        overflow        : scroll;
+        display         : inline-block;
+        position        : absolute;
+        z-index         : 1;
 
 
 
