--- a/src/components/BuyTicket/BookSeet.scss
+++ b/src/components/BuyTicket/BookSeet.scss
@@ -229,13 +229,25 @@
 
             .button-book-submit {
                 width: 100%;
+                display: flex;
+                gap: 30px;
+
+                .btn-backToPage {
+                    background-color: #FCAF17;
+                    width: 100%;
+                    height: 35px;
+                    font-weight: 700;
+                    font-size: 13px;
+                    color: #fff;
+                    text-transform: uppercase;
+                }
 
                 .btn-book {
                     background-color: #FCAF17;
-                    padding: 10px;
                     width: 100%;
-                    height: 48px;
+                    height: 35px;
                     font-weight: 700;
+                    font-size: 13px;
                     color: #fff;
                     text-transform: uppercase;
                 }
