--- a/src/components/DetailFilms/BookTicket.scss
+++ b/src/components/DetailFilms/BookTicket.scss
@@ -4,26 +4,27 @@
     .box {
         .row-detail {
             padding-top: 50px;
+            padding-bottom: 20px;
 
             .col-left {
 
                 .img-trail {
-                    width   : 100%;
+                    width: 100%;
                     position: relative;
                 }
 
                 .btn-show {
 
-                    position : absolute;
-                    top      : 35%;
-                    left     : 50%;
+                    position: absolute;
+                    top: 35%;
+                    left: 50%;
                     transform: translate(-50%, -50%);
 
                     .icon-show {
-                        font-size      : 50pt;
-                        border         : 1px solid #000;
-                        border-radius  : 50%;
-                        color          : rgba(210, 210, 210, 0.5);
+                        font-size: 50pt;
+                        border: 1px solid #000;
+                        border-radius: 50%;
+                        color: rgba(210, 210, 210, 0.5);
                         //background   : none !important;
 
                     }
@@ -37,17 +38,39 @@
 
                         ul {
                             list-style-type: none;
-                            width          : 100%;
+                            width: 100%;
 
                             li {
                                 display: flex;
 
                                 .title-left {
-                                    width: 20%;
+                                    width: 40%;
+                                    text-transform: uppercase;
+                                    font-size: 20px;
                                 }
 
                                 .title-right {
                                     width: 80%;
+
+                                    .rating-movie.rating-home {
+                                        background-size: 20px;
+                                        height: 25px;
+                                        // padding-left: 24px;
+                                        // margin-left: 10px;
+                                        display: flex;
+                                    }
+
+                                    .rating-movie {
+                                        margin-right: 3px;
+                                        font-size: 16px;
+                                        height: 40px;
+                                        background: url(../../assets/ic_star_yellow.png) no-repeat;
+                                        background-size: 25px;
+                                        padding-left: 30px;
+                                        background-position: left center;
+                                        display: table-cell;
+                                        vertical-align: middle;
+                                    }
                                 }
                             }
                         }
@@ -55,7 +78,7 @@
                 }
 
                 .row-seen {
-                    .detail {
+                    .time-container {
                         width: 100%;
 
                         ul {
@@ -64,12 +87,32 @@
                             li {
                                 display: flex;
 
-                                .seen-left {
-                                    width: 20%;
+                                .time-left {
+                                    // width: 20%;
+
+                                    i {
+                                        // float: right;
+                                        margin: 6px 0
+                                    }
+
+                                    .icon-c13 {
+                                        width: 28px;
+                                        height: 22px;
+                                        display: inline-block;
+                                        background: url('https://www.galaxycine.vn/website/images/ic-c13.png') no-repeat;
+                                        background-size: cover;
+                                    }
                                 }
 
-                                .seen-right {
-                                    width: 80%;
+                                .time-right {
+                                    // width: 80%;
+                                    color: #fff;
+                                    margin: 5px 30px;
+                                    padding-top: 2px;
+
+                                    .fa-clock {
+                                        margin-right: 5px;
+                                    }
                                 }
                             }
                         }
@@ -82,24 +125,24 @@
 
                         ul {
                             list-style-type: none;
-                            width          : 100%;
+                            width: 100%;
 
                             li {
                                 display: flex;
-                                margin : 20px 0px 20px 0px;
+                                margin: 20px 0px 20px 0px;
 
                                 .info-left {
-                                    width         : 20%;
-                                    float         : left;
+                                    width: 20%;
+                                    float: left;
                                     text-transform: capitalize;
-                                    color         : #ffffff;
+                                    color: #ffffff;
                                 }
 
                                 .info-right {
-                                    width         : 80%;
+                                    width: 80%;
                                     text-transform: capitalize;
-                                    font-weight   : bold;
-                                    color         : #ffffff;
+                                    font-weight: bold;
+                                    color: #ffffff;
                                 }
                             }
                         }
@@ -108,13 +151,13 @@
 
                 .row-btn {
                     .blog {
-                        display     : table;
-                        width       : 100%;
-                        margin      : 30px 0;
+                        display: table;
+                        width: 100%;
+                        margin: 30px 0;
                         padding-left: 30px;
 
                         li {
-                            display       : inline-block;
+                            display: inline-block;
                             vertical-align: middle;
 
                         }
@@ -124,7 +167,7 @@
 
                             span {
                                 margin-right: 50px;
-                                margin-top  : 10px;
+                                margin-top: 10px;
 
                                 iframe {
                                     width: 140px !important;
@@ -133,14 +176,14 @@
                         }
 
                         .btn-buy {
-                            width        : 100px;
-                            height       : 40px;
+                            width: 100px;
+                            height: 40px;
                             border-radius: 5px;
 
                             a {
                                 text-decoration: none;
-                                color          : #000000;
-                                text-transform : uppercase;
+                                color: #000000;
+                                text-transform: uppercase;
                             }
 
                             &:hover {
@@ -153,14 +196,14 @@
                         }
 
                         .btn-review {
-                            width        : 120px;
-                            height       : 40px;
+                            width: 120px;
+                            height: 40px;
                             border-radius: 5px;
 
                             a {
                                 text-decoration: none;
-                                color          : #000000;
-                                text-transform : uppercase;
+                                color: #000000;
+                                text-transform: uppercase;
                             }
 
                             &:hover {
@@ -181,6 +224,8 @@
 }
 
 .content-calendar {
+    margin-bottom: 100px;
+
     .row-book {
         padding-top: 30px;
 
@@ -189,19 +234,19 @@
                 padding-bottom: 20px;
 
                 h5 {
-                    position      : relative;
+                    position: relative;
                     text-transform: uppercase;
-                    font-size     : 13pt;
-                    color         : #000000;
-                    font-weight   : bold;
+                    font-size: 13pt;
+                    color: #000000;
+                    font-weight: bold;
                 }
 
                 &:after {
-                    content   : "";
-                    position  : absolute;
-                    display   : block;
-                    width     : 15%;
-                    height    : 3px;
+                    content: "";
+                    position: absolute;
+                    display: block;
+                    width: 15%;
+                    height: 3px;
                     margin-top: -5px;
                     background: #fcaf17;
                 }
@@ -212,12 +257,19 @@
 
                     .date {
                         display: flex;
+                        padding-left: 0px;
 
                         input {
-                            width        : 100%;
-                            align-items  : center;
-                            border       : 1px solid #c4c4c4;
+                            width: 100%;
+                            align-items: center;
+                            border: 1px solid #c4c4c4;
                             border-radius: 5px;
+                            height: 36px;
+                        }
+
+                        .flatpickr-input {
+                            height: 37px;
+
                         }
                     }
                 }
@@ -228,33 +280,56 @@
 
                 .calender {
                     border: 1px solid #000000;
+                    border-top: none;
 
                     .title-cal {
-                        padding-left    : 20px;
+                        padding-left: 20px;
                         background-color: #000000;
-                        height          : 40px;
+                        height: 40px;
 
                         h5 {
-                            line-height   : 40px;
+                            line-height: 40px;
                             text-transform: uppercase;
-                            color         : #ffffff;
+                            color: #ffffff;
                         }
                     }
 
                     .type-film {
-                        padding-left    : 20px;
-                        padding-top     : 10px;
+                        padding-left: 20px;
+                        padding-top: 10px;
                         //padding-bottom: 10px;
                     }
 
                     .btn-group {
-                        padding-left: 20px;
+                        display: flex;
+                        gap: 15px;
+                        flex-wrap: wrap;
+                        padding: 10px 0px 0px 20px;
 
                         button {
-                            margin          : 20px;
-                            background-color: #fff;
-                            border          : 1px solid #c4c4c4;
 
+                            // background-color: #fff;
+                            // border: 1px solid #c4c4c4;
+                            // margin: 20px;
+                            padding: 3px 5px;
+                            border: none;
+                            outline: none;
+                            background-color: #fff04b;
+                            min-width: 75px;
+                            font-size: 14px;
+                            border-radius: 3px;
+                            font-weight: 600;
+                            color: #333;
+
+                            &:hover {
+                                background-color: #ebcf93;
+                                color: #000;
+                            }
+
+                        }
+
+                        .btn-vie {
+                            min-width: 75px;
                         }
                     }
                 }
@@ -266,59 +341,161 @@
     .col-right {
         .title {
             h5 {
-                position      : relative;
+                position: relative;
                 text-transform: uppercase;
-                font-size     : 13pt;
-                color         : #000000;
-                font-weight   : bold;
+                font-size: 13pt;
+                color: #000000;
+                font-weight: bold;
             }
 
             &:after {
-                content   : "";
-                position  : absolute;
-                display   : block;
-                left      : 13px;
-                width     : 30%;
-                height    : 3px;
+                content: "";
+                position: absolute;
+                display: block;
+                left: 13px;
+                width: 30%;
+                height: 3px;
                 margin-top: -5px;
                 background: #fcaf17;
             }
         }
 
         .col-image {
-            padding-top: 20px;
+            align-items: center;
+            cursor: pointer;
 
-            .image-pdc {
-                flex-direction: column;
+            .image {
+                position: relative;
+                width: 100%;
+                justify-content: center;
+                align-items: center;
+                display: flex;
 
-                img {
+
+
+                .image__img {
+                    display: block;
                     width: 100%;
+                    height: 250px;
+
                 }
 
+                .image__overlay {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    background: rgba(0, 0, 0, 0.6);
+                    color: #ffffff;
+                    font-family: 'Quicksand', sans-serif;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    opacity: 0;
+                    transition: opacity 0.25s;
+
+                    --blur {
+                        backdrop-filter: blur(5px);
+                    }
+
+                    >* {
+                        transform: translateY(20px);
+                        transition: transform 0.25s;
+                    }
+
+                }
+
+                .image__overlay--primary {
+                    backdrop-filter: blur(2px);
+                }
+            }
+
+            .text-detail {
+                margin-top: 10px;
+                font-size: 13px;
+
                 .vn {
-                    text-transform: uppercase;
-                    font-weight   : bold;
-                    color         : #000000;
+                    color: #2e2e2e;
+                    text-transform: capitalize;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    margin-bottom: 0;
                 }
 
                 .eng {
+
                     text-transform: uppercase;
-                    color         : #555555;
+                    color: #a0a3a7;
 
                 }
+
             }
+
+            .image__overlay:hover {
+                opacity: 1;
+
+                >* {
+                    transform: translateY(0);
+                }
+            }
+
 
             .link-read-more {
                 text-align: center;
+                margin-top: 30px;
 
                 a {
                     text-decoration: none;
-                    text-transform : uppercase;
-                    color          : #fcaf17;
-                    font-weight    : bold;
+                    text-transform: uppercase;
+                    color: #fcaf17;
+                    font-weight: bold;
                 }
             }
         }
+
+
+
+        // .col-image {
+        //     padding-top: 20px;
+
+        //     .image-pdc {
+        //         flex-direction: column;
+
+        //         img {
+        //             width: 100%;
+        //         }
+
+        //         .vn {
+        //             margin-top: 10px;
+        //             font-size: 13px;
+        //             color: #43464b;
+        //             text-transform: capitalize;
+        //             text-overflow: ellipsis;
+        //             overflow: hidden;
+        //             white-space: nowrap;
+        //             margin-bottom: 0;
+        //         }
+
+        //         .eng {
+        //             font-size: 13px;
+        //             text-transform: uppercase;
+        //             color: #a0a3a7;
+
+        //         }
+        //     }
+
+        //     .link-read-more {
+        //         text-align: center;
+
+        //         a {
+        //             text-decoration: none;
+        //             text-transform: uppercase;
+        //             color: #fcaf17;
+        //             font-weight: bold;
+        //         }
+        //     }
+        // }
 
 
     }
