--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -54,10 +54,12 @@ body {
                             background-color: #FCAF17;
                             padding: 10px;
                             width: 100%;
-                            height: 48px;
+                            height: 40px;
                             font-weight: 700;
                             color: #fff;
                             text-transform: uppercase;
+                            border: none;
+                            font-size: 15px;
                         }
                     }
                 }
@@ -145,10 +147,12 @@ body {
                             background-color: #FCAF17;
                             padding: 10px;
                             width: 100%;
-                            height: 48px;
+                            height: 40px;
                             font-weight: 700;
                             color: #fff;
                             text-transform: uppercase;
+                            font-size: 15px;
+                            border: none;
                         }
                     }
                 }
