--- a/src/components/BuyTicket/BookTicket.scss
+++ b/src/components/BuyTicket/BookTicket.scss
@@ -14,7 +14,7 @@
 
             thead {
                 tr {
-                    background-color: #ffebc2;
+                    background-color: #fff1d3;
 
 
                 }
