--- a/src/components/DetailFilms/BookTicket.scss
+++ b/src/components/DetailFilms/BookTicket.scss
@@ -1,4 +1,4 @@
-.detail-film {
+.book-ticket-film {
     background-color: #000000;
 
     .box {
@@ -44,13 +44,19 @@
                                 display: flex;
 
                                 .title-left {
-                                    width: 40%;
+                                    // width: 60%;
                                     text-transform: uppercase;
                                     font-size: 20px;
+                                    color: #fff;
                                 }
 
                                 .title-right {
-                                    width: 80%;
+                                    margin-left: 50px;
+                                    color: #fff;
+                                    display: flex;
+                                    align-items: center;
+                                    vertical-align: middle;
+                                    justify-content: center;
 
                                     .rating-movie.rating-home {
                                         background-size: 20px;
@@ -67,7 +73,7 @@
                                         background: url(../../assets/ic_star_yellow.png) no-repeat;
                                         background-size: 25px;
                                         padding-left: 30px;
-                                        background-position: left center;
+                                        // background-position: left center;
                                         display: table-cell;
                                         vertical-align: middle;
                                     }
@@ -338,165 +344,4 @@
         }
     }
 
-    .col-right {
-        .title {
-            h5 {
-                position: relative;
-                text-transform: uppercase;
-                font-size: 13pt;
-                color: #000000;
-                font-weight: bold;
-            }
-
-            &:after {
-                content: "";
-                position: absolute;
-                display: block;
-                left: 13px;
-                width: 30%;
-                height: 3px;
-                margin-top: -5px;
-                background: #fcaf17;
-            }
-        }
-
-        .col-image {
-            align-items: center;
-            cursor: pointer;
-
-            .image {
-                position: relative;
-                width: 100%;
-                justify-content: center;
-                align-items: center;
-                display: flex;
-
-
-
-                .image__img {
-                    display: block;
-                    width: 100%;
-                    height: 250px;
-
-                }
-
-                .image__overlay {
-                    position: absolute;
-                    width: 100%;
-                    height: 100%;
-                    background: rgba(0, 0, 0, 0.6);
-                    color: #ffffff;
-                    font-family: 'Quicksand', sans-serif;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: center;
-                    opacity: 0;
-                    transition: opacity 0.25s;
-
-                    --blur {
-                        backdrop-filter: blur(5px);
-                    }
-
-                    >* {
-                        transform: translateY(20px);
-                        transition: transform 0.25s;
-                    }
-
-                }
-
-                .image__overlay--primary {
-                    backdrop-filter: blur(2px);
-                }
-            }
-
-            .text-detail {
-                margin-top: 10px;
-                font-size: 13px;
-
-                .vn {
-                    color: #2e2e2e;
-                    text-transform: capitalize;
-                    text-overflow: ellipsis;
-                    overflow: hidden;
-                    white-space: nowrap;
-                    margin-bottom: 0;
-                }
-
-                .eng {
-
-                    text-transform: uppercase;
-                    color: #a0a3a7;
-
-                }
-
-            }
-
-            .image__overlay:hover {
-                opacity: 1;
-
-                >* {
-                    transform: translateY(0);
-                }
-            }
-
-
-            .link-read-more {
-                text-align: center;
-                margin-top: 30px;
-
-                a {
-                    text-decoration: none;
-                    text-transform: uppercase;
-                    color: #fcaf17;
-                    font-weight: bold;
-                }
-            }
-        }
-
-
-
-        // .col-image {
-        //     padding-top: 20px;
-
-        //     .image-pdc {
-        //         flex-direction: column;
-
-        //         img {
-        //             width: 100%;
-        //         }
-
-        //         .vn {
-        //             margin-top: 10px;
-        //             font-size: 13px;
-        //             color: #43464b;
-        //             text-transform: capitalize;
-        //             text-overflow: ellipsis;
-        //             overflow: hidden;
-        //             white-space: nowrap;
-        //             margin-bottom: 0;
-        //         }
-
-        //         .eng {
-        //             font-size: 13px;
-        //             text-transform: uppercase;
-        //             color: #a0a3a7;
-
-        //         }
-        //     }
-
-        //     .link-read-more {
-        //         text-align: center;
-
-        //         a {
-        //             text-decoration: none;
-        //             text-transform: uppercase;
-        //             color: #fcaf17;
-        //             font-weight: bold;
-        //         }
-        //     }
-        // }
-
-
-    }
 }
