--- a/src/components/DetailFilms/ChiTietPhim.scss
+++ b/src/components/DetailFilms/ChiTietPhim.scss
@@ -1,5 +1,6 @@
 .detail-film {
     background-color: #000000;
+    height: auto;
 
     .box {
         .row-detail {
@@ -8,22 +9,22 @@
             .col-left {
 
                 .img-trail {
-                    width   : 100%;
+                    width: 100%;
                     position: relative;
                 }
 
                 .btn-show {
 
-                    position : absolute;
-                    top      : 35%;
-                    left     : 50%;
+                    position: absolute;
+                    top: 35%;
+                    left: 50%;
                     transform: translate(-50%, -50%);
 
                     .icon-show {
-                        font-size      : 50pt;
-                        border         : 1px solid #000;
-                        border-radius  : 50%;
-                        color          : rgba(210, 210, 210, 0.5);
+                        font-size: 50pt;
+                        border: 1px solid #000;
+                        border-radius: 50%;
+                        color: rgba(210, 210, 210, 0.5);
                         //background   : none !important;
 
                     }
@@ -37,19 +38,46 @@
 
                         ul {
                             list-style-type: none;
-                            width          : 100%;
+                            width: 100%;
+
 
                             li {
                                 display: flex;
 
+
                                 .title-left {
-                                    width: 20%;
-                                    color: #ffffff;
+                                    text-transform: uppercase;
+                                    font-size: 20px;
+                                    color: #fff;
                                 }
 
                                 .title-right {
-                                    width: 80%;
-                                    color: #ffffff;
+                                    margin-left: 50px;
+                                    color: #fff;
+                                    display: flex;
+                                    align-items: center;
+                                    vertical-align: middle;
+                                    justify-content: center;
+
+                                    .rating-movie.rating-home {
+                                        background-size: 20px;
+                                        height: 25px;
+                                        // padding-left: 24px;
+                                        // margin-left: 10px;
+                                        display: flex;
+                                    }
+
+                                    .rating-movie {
+                                        margin-right: 3px;
+                                        font-size: 16px;
+                                        height: 40px;
+                                        background: url(../../assets/ic_star_yellow.png) no-repeat;
+                                        background-size: 25px;
+                                        padding-left: 30px;
+                                        // background-position: left center;
+                                        display: table-cell;
+                                        vertical-align: middle;
+                                    }
                                 }
                             }
                         }
@@ -57,7 +85,7 @@
                 }
 
                 .row-seen {
-                    .detail {
+                    .time-container {
                         width: 100%;
 
                         ul {
@@ -66,14 +94,32 @@
                             li {
                                 display: flex;
 
-                                .seen-left {
-                                    width: 20%;
-                                    color: #ffffff;
+                                .time-left {
+                                    // width: 20%;
+
+                                    i {
+                                        // float: right;
+                                        margin: 6px 0
+                                    }
+
+                                    .icon-c13 {
+                                        width: 28px;
+                                        height: 22px;
+                                        display: inline-block;
+                                        background: url('https://www.galaxycine.vn/website/images/ic-c13.png') no-repeat;
+                                        background-size: cover;
+                                    }
                                 }
 
-                                .seen-right {
-                                    width: 80%;
-                                    color: #ffffff;
+                                .time-right {
+                                    // width: 80%;
+                                    color: #fff;
+                                    margin: 5px 30px;
+                                    padding-top: 2px;
+
+                                    .fa-clock {
+                                        margin-right: 5px;
+                                    }
                                 }
                             }
                         }
@@ -86,24 +132,24 @@
 
                         ul {
                             list-style-type: none;
-                            width          : 100%;
+                            width: 100%;
 
                             li {
                                 display: flex;
-                                margin : 20px 0px 20px 0px;
+                                margin: 20px 0px 20px 0px;
 
                                 .info-left {
-                                    width         : 20%;
-                                    float         : left;
+                                    width: 20%;
+                                    float: left;
                                     text-transform: capitalize;
-                                    color         : #ffffff;
+                                    color: #ffffff;
                                 }
 
                                 .info-right {
-                                    width         : 80%;
+                                    width: 80%;
                                     text-transform: capitalize;
-                                    font-weight   : bold;
-                                    color         : #ffffff;
+                                    font-weight: bold;
+                                    color: #ffffff;
                                 }
                             }
                         }
@@ -111,76 +157,79 @@
                 }
 
                 .row-btn {
+                    margin-bottom: 20px;
+
                     .blog {
-                        display     : table;
-                        width       : 100%;
-                        margin      : 30px 0;
+                        display: flex;
+                        width: 100%;
+                        gap: 20px;
+                        margin: 30px 0;
                         padding-left: 30px;
 
                         li {
-                            display       : inline-block;
+                            display: inline-block;
                             vertical-align: middle;
 
                         }
 
-                        .fb-like {
+                        // .fb-like {
 
 
-                            span {
-                                margin-right: 50px;
-                                margin-top  : 10px;
+                        //     span {
+                        //         margin-right: 50px;
+                        //         margin-top: 10px;
 
-                                iframe {
-                                    width: 140px !important;
+                        //         iframe {
+                        //             width: 140px !important;
 
-                                    // .svg {
-                                    //     .plugin {
-                                    //         .pluginSkinLight {
-                                    //             display        : flex;
-                                    //             justify-content: center;
-                                    //         }
-                                    //     }
+                        //             // .svg {
+                        //             //     .plugin {
+                        //             //         .pluginSkinLight {
+                        //             //             display        : flex;
+                        //             //             justify-content: center;
+                        //             //         }
+                        //             //     }
 
-                                    // }
+                        //             // }
 
 
-                                }
-                            }
-                        }
+                        //         }
+                        //     }
+                        // }
 
                         .btn-buy {
-                            width        : 100px;
-                            height       : 40px;
+
+                            height: 35px;
                             border-radius: 5px;
 
                             a {
                                 text-decoration: none;
-                                color          : #000000;
-                                text-transform : uppercase;
+                                color: #000000;
+                                text-transform: uppercase;
                             }
 
-                            &:hover {
-                                background-color: #fcaf17;
+                            // &:hover {
+                            //     background-color: #fcaf17;
 
-                                a {
-                                    color: #ffffff;
-                                }
-                            }
+                            //     a {
+                            //         color: #ffffff;
+                            //     }
+                            // }
                         }
 
                         .btn-review {
-                            width        : 120px;
-                            height       : 40px;
+
+                            height: 35px;
                             border-radius: 5px;
 
                             a {
                                 text-decoration: none;
-                                color          : #000000;
-                                text-transform : uppercase;
+                                color: #000000;
+                                text-transform: uppercase;
                             }
 
                             &:hover {
-                                background-color: #fcaf17;
+                                background-color: #fff;
 
                                 a {
                                     color: #ffffff;
@@ -190,17 +239,19 @@
 
                         .btn-buy {
                             background-color: orange;
-                            color           : #fff;
-                            text-transform  : uppercase;
-                            width           : 150px;
+                            color: #fff;
+                            text-transform: uppercase;
+                            width: 15%;
+                            font-size: 15px;
                         }
 
                         .btn-review {
-                            margin-left     : 30px;
+                            font-size: 15px;
                             background-color: #fff;
-                            color           : #000;
-                            text-transform  : uppercase;
-                            width           : 150px;
+                            color: #000;
+                            text-transform: uppercase;
+                            width: 15%;
+                            border: none;
                         }
 
 
@@ -222,21 +273,21 @@
 
             .title {
                 h5 {
-                    position      : relative;
+                    position: relative;
                     text-transform: uppercase;
-                    font-size     : 13pt;
-                    color         : #000000;
-                    font-weight   : bold;
+                    font-size: 13pt;
+                    color: #000000;
+                    font-weight: bold;
                 }
 
                 &:after {
-                    content     : "";
-                    position    : absolute;
-                    display     : block;
+                    content: "";
+                    position: absolute;
+                    display: block;
                     //left      : 13px;
-                    width       : 10%;
-                    height      : 3px;
-                    background  : #fcaf17;
+                    width: 10%;
+                    height: 3px;
+                    background: #fcaf17;
                 }
             }
 
@@ -249,26 +300,26 @@
             }
 
             .discount {
-                padding-top   : 30px;
+                padding-top: 30px;
                 padding-bottom: 100px;
 
                 .title-discount {
                     h5 {
-                        position      : relative;
+                        position: relative;
                         text-transform: uppercase;
-                        font-size     : 13pt;
-                        color         : #000000;
-                        font-weight   : bold;
+                        font-size: 13pt;
+                        color: #000000;
+                        font-weight: bold;
                     }
 
                     &:after {
-                        content     : "";
-                        position    : absolute;
-                        display     : block;
+                        content: "";
+                        position: absolute;
+                        display: block;
                         //left      : 13px;
-                        width       : 15%;
-                        height      : 3px;
-                        background  : #fcaf17;
+                        width: 15%;
+                        height: 3px;
+                        background: #fcaf17;
                     }
                 }
 
@@ -278,8 +329,8 @@
 
                     .slick-slider {
                         padding-top: 15px;
-                        width      : 90%;
-                        margin     : 0 auto;
+                        width: 90%;
+                        margin: 0 auto;
 
                         .slick-arrow {
                             //background-color: #000;
@@ -295,8 +346,8 @@
                             .slick-track {
                                 img {
                                     display: flex;
-                                    margin : auto;
-                                    width  : 100%;
+                                    margin: auto;
+                                    width: 100%;
                                 }
                             }
                         }
@@ -309,7 +360,7 @@
                             margin-top: 10px;
 
                             &::before {
-                                color    : #000;
+                                color: #000;
                                 font-size: 12px;
                             }
                         }
