--- a/src/components/Discount/DiscountList.scss
+++ b/src/components/Discount/DiscountList.scss
@@ -1,5 +1,6 @@
 .con-dis {
     max-width: 1400px;
+    padding: 20px 150px;
 
     .row-dis {
         margin-top: 40px;
@@ -7,22 +8,22 @@
         .col-list-dis {
             .title-discount {
                 h5 {
-                    position      : relative;
+                    position: relative;
                     text-transform: uppercase;
-                    font-size     : 13pt;
-                    color         : #000000;
-                    font-weight   : bold;
+                    font-size: 13pt;
+                    color: #000000;
+                    font-weight: bold;
                 }
 
                 &:after {
-                    content       : "";
-                    position      : absolute;
+                    content: "";
+                    position: absolute;
                     //margin-top  : -2px;
-                    display       : block;
+                    display: block;
                     //left      : 13px;
-                    width         : 12%;
-                    height        : 3px;
-                    background    : #fcaf17;
+                    width: 12%;
+                    height: 3px;
+                    background: #fcaf17;
                 }
             }
 
@@ -30,38 +31,38 @@
                 margin-top: 30px;
 
                 .img-dis {
-                    position     : relative;
-                    width        : 300px;
-                    margin       : auto;
+                    position: relative;
+                    width: 300px;
+                    margin: auto;
                     margin-bottom: 10px;
 
                     .image__ {
-                        width  : 300px;
+                        width: 300px;
                         display: block;
                     }
 
                     .image__overlay__dis {
-                        position       : absolute;
-                        top            : 0;
-                        left           : 0;
-                        width          : 100%;
-                        height         : 100%;
-                        background     : rgba(0, 0, 0, 0.6);
-                        color          : #ffffff;
-                        font-family    : 'Quicksand', sans-serif;
-                        display        : flex;
-                        flex-direction : column;
-                        align-items    : center;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background: rgba(0, 0, 0, 0.6);
+                        color: #ffffff;
+                        font-family: 'Quicksand', sans-serif;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
                         justify-content: center;
-                        opacity        : 0;
-                        transition     : opacity 0.25s;
+                        opacity: 0;
+                        transition: opacity 0.25s;
 
                         --blur {
                             backdrop-filter: blur(5px);
                         }
 
                         >* {
-                            transform : translateY(20px);
+                            transform: translateY(20px);
                             transition: transform 0.25s;
                         }
                     }
