--- a/src/components/HomePage/Home.scss
+++ b/src/components/HomePage/Home.scss
@@ -388,6 +388,7 @@
                     width: 100%;
                     height: 150px;
                     margin: 30px 0;
+                    cursor: pointer;
 
                     .content-image {
                         float: left;
@@ -401,8 +402,18 @@
                         }
                     }
 
+                    .summary {
+                        font-size: 12px;
+                        margin-top: 10px;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                        width: 160px;
+                        height: 1.2em;
+                        white-space: nowrap;
+                    }
+
                     h5 {
-                        font-size: 18px;
+                        font-size: 15px;
                         margin-bottom: 8px;
                         text-transform: capitalize;
                         display: block;
@@ -501,6 +512,7 @@
                     width: 100%;
                     height: 150px;
                     margin: 30px 0;
+                    cursor: pointer;
 
                     .content-image {
                         float: left;
@@ -514,8 +526,18 @@
                         }
                     }
 
+                    .summary {
+                        font-size: 12px;
+                        margin-top: 10px;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                        width: 160px;
+                        height: 1.2em;
+                        white-space: nowrap;
+                    }
+
                     h5 {
-                        font-size: 18px;
+                        font-size: 15px;
                         margin-bottom: 8px;
                         text-transform: capitalize;
                         display: block;
@@ -981,6 +1003,7 @@
                 width: 100%;
                 height: 150px;
                 margin: 30px 0;
+                cursor: pointer;
 
                 .content-image {
                     float: left;
@@ -994,8 +1017,18 @@
                     }
                 }
 
+                .summary {
+                    font-size: 12px;
+                    margin-top: 10px;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                    width: 160px;
+                    height: 1.2em;
+                    white-space: nowrap;
+                }
+
                 h5 {
-                    font-size: 18px;
+                    font-size: 15px;
                     margin-bottom: 8px;
                     text-transform: capitalize;
                     display: block;
@@ -1092,6 +1125,7 @@
                 width: 100%;
                 height: 150px;
                 margin: 30px 0;
+                cursor: pointer;
 
                 .content-image {
                     float: left;
@@ -1105,8 +1139,19 @@
                     }
                 }
 
+                .summary {
+                    font-size: 12px;
+                    margin-top: 10px;
+
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                    width: 160px;
+                    height: 1.2em;
+                    white-space: nowrap;
+                }
+
                 h5 {
-                    font-size: 18px;
+                    font-size: 15px;
                     margin-bottom: 8px;
                     text-transform: capitalize;
                     display: block;
