--- a/src/components/ReviewMovie/DetailReviewFilm.scss
+++ b/src/components/ReviewMovie/DetailReviewFilm.scss
@@ -1,7 +1,9 @@
 @keyframes show-content {}
 
 .con-de {
+    padding: 20px 100px;
     max-width: 1400px;
+    padding: 20px 150px;
 
     .row-de {
         margin-top: 50px;
@@ -11,7 +13,7 @@
 
             .row-de-1 {
                 p {
-                    font-size  : 20px;
+                    font-size: 20px;
                     font-weight: 700;
                 }
 
@@ -19,18 +21,19 @@
 
             hr {
                 margin-left: -10px;
-                margin-top : -15px;
-                width      : 100%;
+                margin-top: -15px;
+                width: 100%;
             }
 
             .row-de-fc {
                 list-style-type: none;
-                margin-left    : -40px;
+                margin-left: -40px;
+
 
                 .fb-like {
                     span {
                         margin-right: 40px;
-                        margin-top  : 5px;
+                        margin-top: 5px;
 
                         iframe {
                             width: 160px !important;
@@ -40,35 +43,37 @@
                 }
 
                 li {
-                    margin     : 0px 20px 0px 30px;
+                    margin: 0px 20px 0px 30px;
                     line-height: 35px;
                 }
 
                 .rating-movie.rating-home {
                     background-size: 20px;
-                    height         : 25px;
-                    padding-left   : 24px;
-                    margin-left    : 10px;
+                    height: 25px;
+                    padding-left: 24px;
+                    margin-left: 10px;
                 }
 
                 .rating-movie {
-                    font-size          : 15px;
-                    height             : 40px;
-                    background         : url(../../assets/ic_star_yellow.png) no-repeat;
-                    background-size    : 25px;
-                    padding-left       : 30px;
+                    font-size: 15px;
+                    height: 20px;
+                    background: url(../../assets/ic_star_yellow.png) no-repeat;
+                    background-size: 25px;
+                    padding-left: 30px;
                     background-position: left center;
-                    display            : table-cell;
-                    vertical-align     : middle;
+                    display: table-cell;
+                    vertical-align: middle;
                 }
 
                 .btn-review {
                     text-transform: uppercase;
+                    height: 25px;
+                    font-size: 10px;
                 }
             }
 
             .row-content-de {
-                margin-top: 20px;
+                margin-top: 30px;
                 text-align: justify;
 
                 img {
@@ -79,7 +84,7 @@
 
             .row-content-readmore {
                 text-align: justify;
-                overflow  : hidden;
+                overflow: hidden;
                 max-height: 0;
                 margin-top: 20px;
             }
@@ -92,14 +97,14 @@
                 justify-content: center;
 
                 button {
-                    width        : 100px;
-                    height       : 40px;
-                    border       : none;
+                    width: 100px;
+                    height: 40px;
+                    border: none;
                     border-radius: 5px;
 
                     &:hover {
                         background-color: #fcaf17;
-                        color           : #ffffff;
+                        color: #ffffff;
                     }
                 }
             }
@@ -109,20 +114,20 @@
 
                 .title-cmt {
                     h5 {
-                        position      : relative;
+                        position: relative;
                         text-transform: uppercase;
-                        font-size     : 13pt;
-                        color         : #000000;
-                        font-weight   : bold;
+                        font-size: 13pt;
+                        color: #000000;
+                        font-weight: bold;
                     }
 
                     &:after {
-                        content   : "";
-                        position  : absolute;
-                        display   : block;
-                        left      : 13px;
-                        width     : 10%;
-                        height    : 3px;
+                        content: "";
+                        position: absolute;
+                        display: block;
+                        left: 13px;
+                        width: 10%;
+                        height: 3px;
                         background: #fcaf17;
                     }
                 }
@@ -131,8 +136,8 @@
                     padding-top: 20px;
 
                     .area-51 {
-                        width        : 100%;
-                        height       : 100px;
+                        width: 100%;
+                        height: 100px;
                         border-radius: 10px;
                     }
                 }
@@ -141,33 +146,42 @@
                     margin-left: 0px;
                 }
 
-                .btn-send {
-                    display        : flex;
-                    justify-content: flex-end;
+                .bottom-cmt {
+                    display: flex;
+                    margin-top: 20px;
 
-                    button {
-                        width        : 80px;
-                        height       : 40px;
-                        border       : none;
-                        border-radius: 5px;
 
-                        &:hover {
-                            background-color: #fcaf17;
-                            color           : #ffffff;
+                    .btn-send {
+                        display: flex;
+                        justify-content: flex-end;
+                        margin-left: auto;
+
+
+                        button {
+                            width: 80px;
+                            height: 40px;
+                            border: none;
+                            border-radius: 5px;
+
+                            &:hover {
+                                background-color: #fcaf17;
+                                color: #ffffff;
+                            }
                         }
                     }
                 }
+
             }
         }
 
         .show-comment {
-            margin-top   : 40px;
+            margin-top: 40px;
             margin-bottom: 20px;
 
             .user-name {
                 text-transform: capitalize;
-                font-weight   : bold;
-                margin-bottom : 10px;
+                font-weight: bold;
+                margin-bottom: 10px;
             }
 
             .number-rate {
