--- a/src/components/Share/Header.scss
+++ b/src/components/Share/Header.scss
@@ -331,7 +331,7 @@
 }
 
 .home-header-container {
-    height: 60px;
+    height: 70px;
     width: 100%;
     padding: 0 80px;
     top: 0;
@@ -356,7 +356,7 @@
             .header-logo {
 
                 background-size: 100%;
-                height: 80%;
+                height: 65%;
                 width: 100%;
                 cursor: pointer;
                 transform: scale(0.8, 0.8);
@@ -372,42 +372,42 @@
             justify-content: center;
             align-items: center;
 
-            .child-content {
-                //display: flex;
+            // .child-content {
+            //     //display: flex;
 
-                .search {
+            //     .search {
 
-                    // display        : flex;
-                    // justify-content: center;
-                    // align-items    : center;
-                    // margin         : 0 auto;
-                    // padding        : 3px;
-                    // width          : 400px;
-                    // border-radius  : 30px;
-                    // background     : #fff;
-                    // border         : 1px solid #ced0da;
+            //         display        : flex;
+            //         justify-content: center;
+            //         align-items    : center;
+            //         margin         : 0 auto;
+            //         padding        : 3px;
+            //         width          : 400px;
+            //         border-radius  : 30px;
+            //         background     : #fff;
+            //         border         : 1px solid #ced0da;
 
-                    // i {
-                    //     margin: 0 10px;
+            //         i {
+            //             margin: 0 10px;
 
-                    // }
+            //         }
 
-                    // input {
-                    //     background : transparent;
-                    //     border     : none;
-                    //     width      : 100%;
-                    //     outline    : none;
-                    //     text-indent: 10px;
+            //         input {
+            //             background : transparent;
+            //             border     : none;
+            //             width      : 100%;
+            //             outline    : none;
+            //             text-indent: 10px;
 
 
-                    // }
+            //         }
 
-                    // ::-webkit-input-placeholder {
-                    //     /* Edge */
-                    //     color: #9a9393;
-                    // }
-                }
-            }
+            //         ::-webkit-input-placeholder {
+            //             /* Edge */
+            //             color: #9a9393;
+            //         }
+            //     }
+            // }
         }
 
         .right-content {
@@ -450,7 +450,7 @@
                         .avatar-user {
                             width: 30px;
                             height: 30px;
-                            margin-right: 2px;
+                            margin-right: 10px;
                             border-radius: 50%;
                         }
                     }
