--- a/src/components/Share/SearchBar.scss
+++ b/src/components/Share/SearchBar.scss
@@ -7,12 +7,12 @@
 
         input {
             background-color: white;
-            border          : 1;
-            border-radius   : 10px;
-            font-size       : 18px;
-            padding         : 15px;
-            height          : 30px;
-            width           : 300px;
+            border: 1px solid #ced0da;
+            /* border-radius: 10px; */
+            font-size: 12px;
+            padding: 10px;
+            height: 10px;
+            width: 100%;
 
             &:focus {
                 outline: none;
@@ -20,12 +20,14 @@
         }
 
         .iconSearch {
-            height            : 30px;
-            line-height       : 30px;
-            width             : 50px;
-            //background-color: white;
-            display           : grid;
-            place-items       : center;
+            font-size: 10px;
+            line-height: 30px;
+            width: 25px;
+            display: grid;
+            place-items: center;
+            background-color: #FCAF17;
+            color: #fff;
+            cursor: pointer;
 
             .clearBtn {
                 cursor: pointer;
@@ -34,15 +36,16 @@
     }
 
     .result {
-        margin-top      : 10px;
-        width           : 300px;
-        height          : 300px;
+        margin-top: 2px;
+        width: 300px;
+        // height: 300px;
         background-color: rgb(255, 255, 255);
-        box-shadow      : rgba(0, 0, 0, 0.35) 0px 5px 15px;
-        overflow        : scroll;
-        display         : inline-block;
-        position        : absolute;
-        z-index         : 1;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        overflow: scroll;
+        display: inline-block;
+        position: absolute;
+        z-index: 1;
+        padding: 10px 2px;
 
 
 
@@ -51,11 +54,11 @@
         }
 
         .dataItem {
-            width      : 100%;
-            height     : 50px;
-            display    : flex;
+            width: 100%;
+            height: 50px;
+            display: flex;
             align-items: center;
-            color      : black;
+            color: black;
 
             p {
                 margin-left: 10px;
