--- a/src/components/AccountProfile/AccountProfile.scss
+++ b/src/components/AccountProfile/AccountProfile.scss
@@ -12,7 +12,7 @@
 
     .tabbable-panel {
         padding: 10px;
-        width: 75%;
+        width: 72%;
 
         display: flex;
 
@@ -24,9 +24,13 @@
     /* Default mode */
 
     .tabbable-line> {
+        width: 100%;
+
         .nav-tabs {
             border: none;
             margin: 0px;
+            width: 100%;
+            border-bottom: 1px solid #DDD;
 
             >li {
                 margin-right: 2px;
@@ -43,7 +47,7 @@
 
                 &.open,
                 &:hover {
-                    border-bottom: 4px solid #fbcdcf;
+                    border-bottom: 1px solid #fbcdcf;
                 }
 
                 &.open>a,
@@ -64,7 +68,7 @@
                 }
 
                 &.active {
-                    border-bottom: 4px solid orange;
+                    border-bottom: 1px solid orange;
                     position: relative;
 
                     >a {
@@ -76,6 +80,13 @@
                         }
                     }
                 }
+            }
+
+            .profile-user,
+            .my-transfer {
+                padding-left: 0;
+                font-size: 13px;
+                color: #a0a3a7;
             }
         }
 
@@ -224,6 +235,222 @@
                 border-radius: 10px;
             }
         }
+
+
+        .table-payment-container {
+            width: 75%;
+            margin: 0 auto;
+
+            .table-member {
+                font-size: 12px;
+                width: 100%;
+                margin-top: 30px;
+                margin-bottom: 0;
+
+                thead {
+                    background-color: #47251c;
+                    color: #ffffff;
+                }
+            }
+        }
+
+        .form-filter {
+            width: 75%;
+            margin: 0 auto;
+            display: flex;
+            gap: 30px;
+
+            label {
+                font-size: 12px;
+                display: block;
+                color: #43464b;
+            }
+
+            input {
+                height: 30px;
+            }
+        }
+
+    }
+
+    .col-right {
+        width: 75%;
+        margin: 0 auto;
+        padding-top: 50px;
+
+        .title {
+            a {
+                position: relative;
+                color: #000000;
+                font-weight: bold;
+                font-size: 14px;
+                font-weight: 500;
+                text-transform: uppercase;
+
+                &:hover {
+                    color: #fcaf17;
+                }
+            }
+
+            &:after {
+                content: "";
+                position: absolute;
+                display: block;
+                left: 24px;
+                width: 5%;
+                height: 2px;
+                margin-top: 0px;
+                background: #fcaf17;
+            }
+        }
+
+        .col-image {
+            align-items: center;
+            cursor: pointer;
+            display: flex;
+            gap: 20px;
+
+
+            .item-movie {
+
+
+
+                .image {
+                    position: relative;
+                    width: 100%;
+                    justify-content: center;
+                    align-items: center;
+                    display: flex;
+
+
+
+                    .image__img {
+                        display: block;
+                        width: 100%;
+                        height: 250px;
+
+                    }
+
+                    .image__overlay {
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                        background: rgba(0, 0, 0, 0.6);
+                        color: #ffffff;
+                        font-family: 'Quicksand', sans-serif;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        opacity: 0;
+                        transition: opacity 0.25s;
+
+                        --blur {
+                            backdrop-filter: blur(5px);
+                        }
+
+                        >* {
+                            transform: translateY(20px);
+                            transition: transform 0.25s;
+                        }
+
+                    }
+
+                    .image__overlay--primary {
+                        backdrop-filter: blur(2px);
+                    }
+                }
+
+                .text-detail {
+                    margin-top: 10px;
+                    font-size: 13px;
+
+                    .vn {
+                        color: #2e2e2e;
+                        text-transform: capitalize;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                        white-space: nowrap;
+                        margin-bottom: 0;
+                    }
+
+                    .eng {
+
+                        text-transform: uppercase;
+                        color: #a0a3a7;
+
+                    }
+
+                }
+
+                .image__overlay:hover {
+                    opacity: 1;
+
+                    >* {
+                        transform: translateY(0);
+                    }
+                }
+
+
+                .link-read-more {
+                    text-align: center;
+                    margin-top: 30px;
+
+                    a {
+                        text-decoration: none;
+                        text-transform: uppercase;
+                        color: #fcaf17;
+                        font-weight: bold;
+                    }
+                }
+            }
+
+
+        }
+
+
+
+        // .col-image {
+        //     padding-top: 20px;
+
+        //     .image-pdc {
+        //         flex-direction: column;
+
+        //         img {
+        //             width: 100%;
+        //         }
+
+        //         .vn {
+        //             margin-top: 10px;
+        //             font-size: 13px;
+        //             color: #43464b;
+        //             text-transform: capitalize;
+        //             text-overflow: ellipsis;
+        //             overflow: hidden;
+        //             white-space: nowrap;
+        //             margin-bottom: 0;
+        //         }
+
+        //         .eng {
+        //             font-size: 13px;
+        //             text-transform: uppercase;
+        //             color: #a0a3a7;
+
+        //         }
+        //     }
+
+        //     .link-read-more {
+        //         text-align: center;
+
+        //         a {
+        //             text-decoration: none;
+        //             text-transform: uppercase;
+        //             color: #fcaf17;
+        //             font-weight: bold;
+        //         }
+        //     }
+        // }
+
 
     }
 }
