--- a/src/components/ErrorTicket/ErrorTicket.scss
+++ b/src/components/ErrorTicket/ErrorTicket.scss
@@ -1,7 +1,7 @@
 .errorTicketController {
-    height: 800px;
+
     width: 100%;
-    padding: 0 80px;
+    padding: 20px 80px;
     //background-color: red;
 
     .room-main {
@@ -18,39 +18,36 @@
         }
 
         .room-seet {
-            background-color: #fafafa;
+            background-color: #fff;
             height: 200px;
             max-height: 700px;
+            padding: 20px;
 
 
 
             .row_chair {
-                display: flex;
-                flex-direction: row;
-                position: absolute;
-                /* height: 100%; */
-                bottom: 125px;
-                // top: 100px;
-                left: 0;
-                right: 0;
+                // display: flex;
+                // flex-direction: row;
+                // position: absolute;
+                // /* height: 100%; */
+                // bottom: 125px;
+                // // top: 100px;
+                // left: 0;
+                // right: 0;
 
                 .chair {
                     margin: 0 auto;
                     display: flex;
-                    flex-direction: column-reverse;
-                    column-gap: 20px;
+                    gap: 50px;
                     justify-content: center;
                     align-items: center;
                     // row-gap: 20px;
 
-                    .one_row {
-                        display: flex;
-                        flex-direction: row;
-                        column-gap: 20px;
-
-                        .name-column {
-                            background-color: transparent;
+                    .img-error {
+                        img {
+                            width: 180px;
                         }
+
                     }
 
 
