--- a/src/components/HomePage/Home.scss
+++ b/src/components/HomePage/Home.scss
@@ -109,12 +109,13 @@
 
                 button {
                     border-radius: 30px;
-                    border: 1px solid #000;
+                    // border: 1px solid #d0d0d0;
                     width: 200px;
                     margin: 10px;
                     height: 50px;
                     text-transform: uppercase;
                     background-color: #ffffff;
+                    border: none;
 
                     &:hover {
                         background-color: #FCAF17;
@@ -724,7 +725,7 @@
 
             button {
                 border-radius: 30px;
-                border: 1px solid #000;
+                border: 1px solid #d0d0d0;
                 width: 200px;
                 margin: 10px;
                 height: 50px;
