--- a/src/components/ListMovie/DanhSachPhim.scss
+++ b/src/components/ListMovie/DanhSachPhim.scss
@@ -1,5 +1,5 @@
 .list-movie-container {
-    width : 100%;
+    width: 100%;
     height: 800px;
 
     padding: 20px 100px;
@@ -8,14 +8,14 @@
 
         .playing-movie,
         .upcoming-movie {
-            padding        : 10px;
-            text-transform : uppercase;
-            color          : #555555;
+            padding: 10px;
+            text-transform: uppercase;
+            color: #555555;
             text-decoration: none;
-            opacity        : 0.5;
+            opacity: 0.5;
 
             &.active {
-                color  : orange;
+                color: orange;
                 opacity: 1;
             }
 
@@ -29,52 +29,129 @@
 
     .list-movie {
         margin-top: 20px;
-        height    : 400px;
-        padding   : 10px;
+        height: 400px;
+        padding: 10px;
 
-        .film {
-            width : 100%;
-            height: 100%;
+        // .film {
+        //     width : 100%;
+        //     height: 100%;
+        //     cursor: pointer;
+
+        //     .img-film {
+        //         width : 300px;
+        //         height: 200px;
+        //     }
+
+        //     .name-film {
+        //         font-size      : 14px;
+        //         text-transform : uppercase;
+        //         font-weight    : 700;
+        //         margin-top     : 10px;
+        //         margin-bottom  : 5px;
+        //         display        : block;
+        //         text-decoration: none;
+        //         color          : #000;
+        //     }
+
+        //     .desc-film {
+        //         margin-bottom: 50px;
+        //     }
+        // }
+
+        .col-image {
+            margin-top: 10px;
+            align-items: center;
             cursor: pointer;
 
-            .img-film {
-                width : 300px;
-                height: 200px;
+            .image {
+                position: relative;
+                width: 100%;
+                justify-content: center;
+                align-items: center;
+                display: flex;
+
+
+
+                .image__img {
+                    display: block;
+                    width: 100%;
+                    height: 250px;
+
+                }
+
+                .image__overlay {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    background: rgba(0, 0, 0, 0.6);
+                    color: #ffffff;
+                    font-family: 'Quicksand', sans-serif;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    opacity: 0;
+                    transition: opacity 0.25s;
+
+                    --blur {
+                        backdrop-filter: blur(5px);
+                    }
+
+                    >* {
+                        transform: translateY(20px);
+                        transition: transform 0.25s;
+                    }
+
+                }
+
+                .image__overlay--primary {
+                    backdrop-filter: blur(2px);
+                }
             }
 
-            .name-film {
-                font-size      : 14px;
-                text-transform : uppercase;
-                font-weight    : 700;
-                margin-top     : 10px;
-                margin-bottom  : 5px;
-                display        : block;
-                text-decoration: none;
-                color          : #000;
+            .text-detail {
+                margin-top: 10px;
+                font-size: 13px;
+
+                .vn {
+                    color: #2e2e2e;
+                    text-transform: capitalize;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    margin-bottom: 0;
+                }
+
+                .eng {
+
+                    text-transform: uppercase;
+                    color: #a0a3a7;
+
+                }
+
             }
 
-            .desc-film {
-                margin-bottom: 50px;
+            .image__overlay:hover {
+                opacity: 1;
+
+                >* {
+                    transform: translateY(0);
+                }
+            }
+
+
+            .link-read-more {
+                text-align: center;
+                margin-top: 30px;
+
+                a {
+                    text-decoration: none;
+                    text-transform: uppercase;
+                    color: #fcaf17;
+                    font-weight: bold;
+                }
             }
         }
 
-        // .pagination {
-        //     justify-content: center;
-
-        //     .page-link {
-        //         color: #555555;
-
-        //         .visually-hidden {
-        //             display: none;
-        //         }
-        //     }
-
-
-        //     .paginationItemStyle.active .page-link {
-        //         background-color: #FCAF17 !important;
-        //         border-color    : #FCAF17;
-        //         color           : #fff;
-        //     }
-        // }
     }
 }
