--- a/src/components/SupportQA/FeedBack.scss
+++ b/src/components/SupportQA/FeedBack.scss
@@ -11,18 +11,18 @@
 
                     li {
                         list-style-type: none;
-                        margin-left    : 20px;
-                        margin-right   : 20px;
+                        margin-left: 20px;
+                        margin-right: 20px;
 
                         a {
                             text-decoration: none;
-                            text-transform : uppercase;
-                            color          : #555555;
-                            font-size      : 15pt;
-                            cursor         : pointer;
+                            text-transform: uppercase;
+                            color: #555555;
+                            font-size: 15px;
+                            cursor: pointer;
 
                             &:hover {
-                                color      : #fcaf17;
+                                color: #fcaf17;
                                 font-weight: bold;
                             }
                         }
@@ -31,8 +31,8 @@
             }
 
             .info {
-                margin-top  : 50px;
-                display     : flex;
+                margin-top: 50px;
+                display: flex;
                 padding-left: 22px;
 
                 p {
@@ -44,12 +44,12 @@
                 border: 1px solid #555555;
 
                 .title {
-                    padding-left    : 20px;
-                    text-transform  : uppercase;
+                    padding-left: 20px;
+                    text-transform: uppercase;
                     background-color: #000000;
-                    color           : #fff;
-                    height          : 50px;
-                    line-height     : 50px
+                    color: #fff;
+                    height: 50px;
+                    line-height: 50px
                 }
 
                 .row-feed {
@@ -61,9 +61,23 @@
                                 text-transform: uppercase;
                             }
                         }
+
+                        label {
+                            padding: 0;
+                        }
+
+                        input {
+                            height: 40px;
+                        }
                     }
 
                     .col-feed-right {
+                        position: relative;
+
+                        label {
+                            padding: 0;
+                        }
+
                         .form-group {
                             label {
                                 text-transform: uppercase;
@@ -72,6 +86,19 @@
 
                         textarea {
                             height: 225px;
+                        }
+
+                        .submit-btn {
+                            position: absolute;
+                            bottom: 20px;
+
+                            button {
+                                background-color: #FCAF17;
+                                border: none;
+                                padding-left: 30px;
+                                padding-right: 30px;
+                                // padding: 5px 30px;
+                            }
                         }
                     }
                 }
@@ -82,20 +109,20 @@
         .col-right {
             .title {
                 h5 {
-                    position      : relative;
+                    position: relative;
                     text-transform: uppercase;
-                    font-size     : 13pt;
-                    color         : #000000;
-                    font-weight   : bold;
+                    font-size: 13pt;
+                    color: #000000;
+                    font-weight: bold;
                 }
 
                 &:after {
-                    content   : "";
-                    position  : absolute;
-                    display   : block;
-                    left      : 13px;
-                    width     : 30%;
-                    height    : 3px;
+                    content: "";
+                    position: absolute;
+                    display: block;
+                    left: 13px;
+                    width: 30%;
+                    height: 3px;
                     margin-top: -5px;
                     background: #fcaf17;
                 }
@@ -113,13 +140,13 @@
 
                     .vn {
                         text-transform: uppercase;
-                        font-weight   : bold;
-                        color         : #000000;
+                        font-weight: bold;
+                        color: #000000;
                     }
 
                     .eng {
                         text-transform: uppercase;
-                        color         : #555555;
+                        color: #555555;
 
                     }
                 }
@@ -129,9 +156,9 @@
 
                     a {
                         text-decoration: none;
-                        text-transform : uppercase;
-                        color          : #fcaf17;
-                        font-weight    : bold;
+                        text-transform: uppercase;
+                        color: #fcaf17;
+                        font-weight: bold;
                     }
                 }
             }
