--- a/src/components/DetailFilms/ChiTietPhim.scss
+++ b/src/components/DetailFilms/ChiTietPhim.scss
@@ -16,16 +16,27 @@
                 .btn-show {
 
                     position: absolute;
-                    top: 35%;
+                    top: 40%;
                     left: 50%;
                     transform: translate(-50%, -50%);
+                    background-color: transparent;
 
                     .icon-show {
                         font-size: 50pt;
-                        border: 1px solid #000;
                         border-radius: 50%;
-                        color: rgba(210, 210, 210, 0.5);
-                        //background   : none !important;
+                        cursor: pointer;
+                        opacity: 0.7;
+                        color: #000;
+                        background-color: #fff;
+                        border-radius: 50%;
+                        transition: all .4s;
+                        border: 1px solid rgba(255, 255, 255, 0.8);
+                        z-index: 999;
+
+                        &:hover {
+                            opacity: 0.5;
+
+                        }
 
                     }
                 }
@@ -157,7 +168,7 @@
                 }
 
                 .row-btn {
-                    margin-bottom: 20px;
+                    // margin-bottom: 20px;
 
                     .blog {
                         display: flex;
