--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -3,7 +3,7 @@ body {
 
     .loginPage-container {
         width: 100%;
-        height: 900px;
+        // height: 900px;
         display: flex;
         padding: 20px 100px;
 
@@ -32,6 +32,11 @@ body {
                     input {
                         height: fit-content;
 
+                    }
+
+                    .errorInput {
+                        color: red;
+                        font-size: 12px;
                     }
                 }
 
@@ -78,6 +83,18 @@ body {
                 .title-register {
                     margin-bottom: 30px;
                     text-transform: uppercase;
+                }
+
+                .error-container {
+                    margin-top: 10px;
+                    border: 1px dashed lightgray;
+                    padding: 1rem;
+                    width: 100%;
+                }
+
+                ul {
+                    list-style-position: inside;
+                    color: lightcoral;
                 }
 
                 .form-group {
