--- a/src/components/BuyTicket/BuyTicket.scss
+++ b/src/components/BuyTicket/BuyTicket.scss
@@ -1,7 +1,6 @@
 .bookingPageController {
-    height: 800px;
     width: 100%;
-    padding: 0 80px;
+    padding: 20px 150px;
 
 
     .tab-movies {
