--- a/src/components/BuyTicket/Payment.scss
+++ b/src/components/BuyTicket/Payment.scss
@@ -1,7 +1,6 @@
 .paymentContainer {
-    height: 800px;
     width: 100%;
-    padding: 20px 100px;
+    padding: 20px 150px;
 
     .payment-wrapper {
         width: 100%;
@@ -61,11 +60,8 @@
                     transform: scale(1.3);
                 }
 
-                .select-payment {
-                    padding: 0;
-                }
-
-                .select-birthday {
+                .select-payment,
+                .select-voucher {
                     padding: 0;
                 }
 
@@ -79,16 +75,16 @@
                 }
 
                 .btn-payment {
-                    font-size: 20px;
-                    width: 200px;
+                    font-size: 15px;
+                    width: 40%;
                     background-color: rgb(252, 175, 23);
                     border: none
                 }
 
                 .btn-back {
                     // fontSize: '20px', width: '200px', border: '1px solid #000', backgroundColor: '#fff', marginRight: '10px'
-                    font-size: 20px;
-                    width: 200px;
+                    font-size: 15px;
+                    width: 40%;
                     background-color: #fff;
                     border: 1px solid #bdbdbd;
                     margin-right: 10px;
@@ -136,5 +132,17 @@
                 }
             }
         }
+
+        .ticket-footer {
+            line-height: 25px;
+
+            .ticket-price-discount {
+                p {
+                    font-size: 12px;
+                }
+            }
+        }
+
+
     }
 }
