--- a/src/components/HomePage/Home.scss
+++ b/src/components/HomePage/Home.scss
@@ -194,6 +194,10 @@
 
                             .image__overlay--primary {
                                 backdrop-filter: blur(2px);
+
+                                button {
+                                    font-size: 12px;
+                                }
                             }
                         }
 
@@ -328,6 +332,10 @@
 
                 .image__overlay--primary {
                     backdrop-filter: blur(2px);
+
+                    button {
+                        font-size: 12px;
+                    }
                 }
             }
 
@@ -507,7 +515,7 @@
                         display: block;
                         left: 0;
                         bottom: -30%;
-                        width: 20%;
+                        width: 10%;
                         height: 2px;
                         background: #fcaf17;
                     }
@@ -824,6 +832,10 @@
 
                     .image__overlay--primary {
                         backdrop-filter: blur(2px);
+
+                        button {
+                            font-size: 12px;
+                        }
                     }
                 }
 
@@ -958,6 +970,10 @@
 
             .image__overlay--primary {
                 backdrop-filter: blur(2px);
+
+                button {
+                    font-size: 12px;
+                }
             }
         }
 
@@ -1139,7 +1155,7 @@
                     display: block;
                     left: 0;
                     bottom: -30%;
-                    width: 20%;
+                    width: 10%;
                     height: 2px;
                     background: #fcaf17;
                 }
