--- a/src/components/Share/SearchBar.scss
+++ b/src/components/Share/SearchBar.scss
@@ -3,17 +3,18 @@
 
     .searchInput {
         display: flex;
-        width  : 250px;
-        height : 40px;
+        // width: 50%;
+        // height: 50%;
 
         input {
             background-color: white;
-            border          : 1px solid #ced0da;
-            /* border-radius: 10px; */
-            font-size       : 12px;
-            padding         : 10px;
-            height          : 40px;
-            width           : 100%;
+            border: 1px solid #ced0da;
+            border-width: 1px 0 1px 1px;
+            font-size: 12px;
+            padding: 3px 25px 3px 10px;
+            // padding: 10px;
+            // height: 40px;
+            // width: 100%;
 
             &:focus {
                 outline: none;
@@ -21,14 +22,14 @@
         }
 
         .iconSearch {
-            font-size       : 15px;
-            line-height     : 30px;
-            width           : 40px;
-            display         : grid;
-            place-items     : center;
+            font-size: 12px;
+            line-height: 30px;
+            width: 40px;
+            display: grid;
+            place-items: center;
             background-color: #FCAF17;
-            color           : #fff;
-            cursor          : pointer;
+            color: #fff;
+            cursor: pointer;
 
             .clearBtn {
                 cursor: pointer;
@@ -37,16 +38,16 @@
     }
 
     .result {
-        margin-top      : 2px;
-        width           : 300px;
+        margin-top: 2px;
+        width: 300px;
         // height: 300px;
         background-color: rgb(255, 255, 255);
-        box-shadow      : rgba(0, 0, 0, 0.35) 0px 5px 15px;
-        overflow        : scroll;
-        display         : inline-block;
-        position        : absolute;
-        z-index         : 1;
-        padding         : 10px 2px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        overflow: scroll;
+        display: inline-block;
+        position: absolute;
+        z-index: 1;
+        padding: 10px 2px;
 
 
 
@@ -55,11 +56,11 @@
         }
 
         .dataItem {
-            width      : 100%;
-            height     : 50px;
-            display    : flex;
+            width: 100%;
+            height: 50px;
+            display: flex;
             align-items: center;
-            color      : black;
+            color: black;
 
             p {
                 margin-left: 10px;
