--- a/src/components/ReviewMovie/DetailReviewFilm.scss
+++ b/src/components/ReviewMovie/DetailReviewFilm.scss
@@ -159,7 +159,8 @@
 
                         button {
                             width: 80px;
-                            height: 40px;
+                            height: 32px;
+                            font-size: 13px;
                             border: none;
                             border-radius: 5px;
 
