--- a/src/components/BuyTicket/BookSeet.scss
+++ b/src/components/BuyTicket/BookSeet.scss
@@ -74,7 +74,7 @@
                         }
 
                         &.active {
-                            background-color: #ffd174;
+                            background-color: #fed990;
                             border: none;
                         }
 
@@ -158,7 +158,7 @@
 
                                 height: 15px;
                                 width: 15px;
-                                background-color: #ffd174;
+                                background-color: #fed990;
                                 text-align: center;
                                 margin-top: 10px;
                                 padding: 0;
